Добавлен API для запроса json

--- a/templates/avahi.html
+++ b/templates/avahi.html
@@ -90,7 +90,7 @@
 			<th>Имя образа</th>
 			<th>Версия образа</th>
 			<th>Имя хоста</th>
-			<th>IP Адресс</th>
+			<th>IP Адрес</th>
 			<th>Добавить примечание</th>
 		
 
