change discovery to zeroconf

--- a/templates/avahi.html
+++ b/templates/avahi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Avahi v2</title>
+    <title>Avahi v2.2</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
 <style>
 
@@ -40,6 +40,38 @@
             }
         </script>
 
+        <script>
+            const eventSource = new EventSource('/stream');
+
+            eventSource.addEventListener('new_message', event => {
+              var dataList = document.getElementById('data-list');
+              dataList.innerHTML = ""
+              console.log(event.data)
+            const devices = JSON.parse(event.data);
+            console.log(devices)
+            var i = 1
+            devices.forEach(device => {
+                const row = document.createElement('tr')
+                row.innerHTML += `<th scope="row"> ${i}</th>
+                                <td>${device.os}</td>
+                                <td>${device.os_version}</td>
+                                <td>${device.name}</td>
+                                <td>${device.ip}</td>
+                                <td>${device.ping}</td>
+                                <td>
+                                    <input 
+                                        type="text" 
+                                        class="form-control" 
+                                        name="new_name.${device.name}" 
+                                        value="${device.comment}"
+                                        onkeydown="if (event.key === 'Enter') save_comment(event, this)">
+                                </td>`;
+                dataList.appendChild(row)
+                i++
+            });
+          });
+        </script>
+
         <form>
             <div class="table-responsive card rounded-3 ">
                 <table class="table table-bordered table-hover rounded-3 border overflow-hidden ">
@@ -50,26 +82,12 @@
                             <th>Версия OC</th>
                             <th>Имя прибора</th>
                             <th>IP Адрес</th>
+                            <th>Ping</th>
                             <th>Добавить комментарий</th>
                         </tr>
                     </thead>
-                    <tbody class="table-group-divider">
-                        {% for row in rows %}
-                        <tr>
-                            <th scope="row"> {{ loop.index0 + 1 }}</td>
-                            {% for cell in row %}
-                            <td>{{ cell }}</td>
-                            {% endfor %}
-                            <td>
-                                <input 
-                                    type="text" 
-                                    class="form-control" 
-                                    name="new_name.{{row[2]}}" 
-                                    value="{{comments[row[2]]}}"
-                                    onkeydown="if (event.key === 'Enter') save_comment(event, this)">
-                            </td>
-                        </tr>
-                        {% endfor %}
+                    <tbody class="table-group-divider" id="data-list">
+
                     </tbody>
                 </table>
             </div>
