--- a/templates/avahi.html
+++ b/templates/avahi.html
@@ -16,7 +16,7 @@
 
     <div class="container my-5">
         <div class="p-3 mb-4 text-bg-secondary rounded-3 text-center">
-		<h1 class="mb-0">ПРИБОРЫ В СЕТИ СПЕКТРОН</h1>
+		<h1 class="mb-0">Devices in Local Network</h1>
 	</div>
 
 
@@ -77,13 +77,13 @@
                 <table class="table table-bordered table-hover rounded-3 border overflow-hidden ">
                     <thead class="table-secondary">
                         <tr>
-                            <th>№</th>
-                            <th>Образ ОС</th>
-                            <th>Версия OC</th>
-                            <th>Имя прибора</th>
-                            <th>IP Адрес</th>
+                            <th>#</th>
+                            <th>OS Image</th>
+                            <th>OS Version</th>
+                            <th>Device Name</th>
+                            <th>IP Address</th>
                             <th>Ping</th>
-                            <th>Добавить комментарий</th>
+                            <th>Add Comment</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider" id="data-list">
@@ -93,7 +93,7 @@
             </div>
         </form>
         <footer class="mt-5 pt-3 border-top text-center">
-            <p class="mb-0">© 2024 Avahi Spectron</p>
+            <p class="mb-0">© 2024 Avahi</p>
             <p class="mt-2">
                 <a href="/api" class="text-decoration-none">API</a> |
                 <a href="/matrix" class="text-decoration-none">Matrix Theme</a> |
