--- a/templates/avahi_matrix.html
+++ b/templates/avahi_matrix.html
@@ -119,7 +119,7 @@
 	</div>
     <div class="container my-5">
 	<div class="header-frame">
-		<h1 class="mb-0">ПРИБОРЫ В СЕТИ СПЕКТРОН</h1>
+        <h1 class="mb-0">Devices in Local Network</h1>
 	</div>
 
 
@@ -181,13 +181,13 @@
                 <table class="table table-hover table-dark table-borderless">
                     <thead>
                         <tr class="green-text">
-                            <th>№</th>
-                            <th>Образ ОС</th>
-                            <th>Версия OC</th>
-                            <th>Имя прибора</th>
-                            <th>IP Адрес</th>
+                            <th>#</th>
+                            <th>OS Image</th>
+                            <th>OS Version</th>
+                            <th>Device Name</th>
+                            <th>IP Address</th>
                             <th>Ping</th>
-                            <th>Добавить комментарий</th>
+                            <th>Add Comment</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider" id="data-list">
